processed/gerrit/txt/46054.txt
Change:     46054
Subject:    LU-14651: uapi: fix gcc11 -Werror=stringop-overread
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/46054
Change-Id:  I731b8f5ec892cb62a46239e6db64360178630a58
Project:    fs/lustre-release
Branch:     master
Status:     ABANDONED
Owner:      James Simmons
Created:    2022-01-12 00:50:34.000000000
Updated:    2022-01-12 14:07:49.000000000
Patch Set:  1
Insertions: +5
Deletions:  -3
Comments:   0 (0 unresolved)

--- Commit Message ---
LU-14651: uapi: fix gcc11 -Werror=stringop-overread

Lastest gcc11 used by newer platforms reports the following error:

lustre-release/lustre/lov/lov_dev.o
In file included from include/linux/string.h:269,
                 from include/linux/bitmap.h:10,
                 from include/linux/cpumask.h:12,
                 from include/linux/smp.h:13,
                 from include/linux/lockdep.h:14,
                 from include/linux/mutex.h:17,
                 from include/linux/kernfs.h:12,
                 from include/linux/sysfs.h:16,
                 from include/linux/kobject.h:20,
                 from /tmp/lustre-release/lustre/include/obd_class.h:34,
                 from /tmp/lustre-release/lustre/lov/lov_dev.c:39:
In function ‘memcpy’,
 inlined from ‘obd_uuid2str’ at include/uapi/linux/lustre/lustre_user.h:1222:3,
 inlined from ‘obd_uuid2str’ at include/uapi/linux/lustre/lustre_user.h:1213:21,
 inlined from ‘lov_add_mdc_target’ at lustre/lov/lov_dev.c:416:4,
 inlined from ‘lov_process_config’ at lustre/lov/lov_dev.c:497:8:
include/linux/fortify-string.h:20:33: error: ‘__builtin_memcpy’ reading 39 bytes
from a region of size 0 [-Werror=stringop-overread]
   20 | #define __underlying_memcpy     __builtin_memcpy
      |                                 ^
include/linux/fortify-string.h:191:16: note: in expansion of macro
‘__underlying_memcpy’
  191 |         return __underlying_memcpy(p, q, size);
      |                ^~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors

The easy fix is use sizeof(uuid->uuid) instead of uuid.

Change-Id: I731b8f5ec892cb62a46239e6db64360178630a58
Signed-off-by: James Simmons <jsimmons@infradead.org>

--- Review History ---

--- Message (James Simmons, 2022-01-12 00:50:34.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2022-01-12 00:55:35.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (jenkins, 2022-01-12 01:19:29.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/85539/ : SUCCESS

--- Message (James Simmons, 2022-01-12 01:29:54.000000000) ---
Abandoned

Oh I see a patch already pushed.
